# proofs-of-inference

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/api/v1/: router.py
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: akave.py  inference.py  model.py  proofs.py
backend/app/artifacts/models/parity/: parity-network.compiled  parity-network.onnx  parity.pt
backend/app/artifacts/models/reverse/: reverse-network.compiled  reverse-network.onnx  reverse.pt
backend/app/artifacts/temp/: input.json  proof.json  settings.json  test.vk  witness.json
backend/app/core/: config.py
backend/app/models/: proof.py
backend/app/services/: akave.py  ezkl_service.py  shared.py
contracts/: VerifyModell.sol
contracts/src/: VerifyModel1.sol  contract.abi  createCallData.sh  createSC.sh  evm_deploy.sol
contracts/tmp/: calldata.bytes  evm_deploy.sol  genoutput.py  output.txt  proof.json  reverse-settings.json  reverse-test.vk
frontend/: package-lock.json  package.json
frontend/src/api/: client.ts  errors.ts  index.ts  inference.ts  proofs.ts
frontend/src/app/: contract.json  layout.tsx  page.tsx
snarks/: .gitignore  README.md  clean.sh  little_transformer.pt  predict.py  proof.py  prove.py  requirements.txt  setup.py  train_model.py  verify.py
snarks/models/: AdditionData.pt  addition.pt  parity-network.compiled  parity-network.onnx  parity-test.vk  parity.pt  reverse-network.compiled  reverse-network.onnx  reverse-test.vk  reverse.pt  reverse_5epochs.pt
(+13 files in other folders)
